--- a/ML/.env
+++ b/ML/.env
@@ -1,6 +1,6 @@
-REDDIT_CLIENT_ID="5uz1su1fiHvxTh6kHt4nRg"
-REDDIT_CLIENT_SECRET="QAODNB1Mf_tLugO8Tfo7zncRukKubQ"
-REDDIT_USER_AGENT="bot (by u/GeologistBusy2288)"
-REDDIT_USERNAME="GeologistBusy2288"
-REDDIT_PASSWORD="Shubhang1#"
-GROQ_API_KEY="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"
+REDDIT_CLIENT_ID=""
+REDDIT_CLIENT_SECRET=""
+REDDIT_USER_AGENT=""
+REDDIT_USERNAME=""
+REDDIT_PASSWORD=""
+GROQ_API_KEY=""
